# goit-pythonweb-hw-10

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 24fd72475315_init_users_and_contacts.py
src/: main.py
src/api/: contacts.py  users.py
src/auth/: router.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
